modified scene controls to be more compact, also added fix for canvas display to get rid of horizontal scrollbars that occasionally appear.

--- a/src/styles/components/_three-scene.scss
+++ b/src/styles/components/_three-scene.scss
@@ -28,6 +28,7 @@
 }
 
 .three-scene canvas {
+  display: block;
   max-width: 100%;
 }
 
@@ -37,7 +38,7 @@
 
 .scene-controls {
   position: absolute;
-  bottom: 0;
+  bottom: functions.px2rem(20);
   width: 100%;
 }
 
@@ -46,11 +47,13 @@
   flex-flow: row wrap;
   justify-content: center;
   gap: 2rem;
+  width: functions.px2rem(666);
+  margin: 0 auto;
   padding: 1rem 2rem;
   background: rgba(variables.$color-skywarp, 0.6);
   backdrop-filter: blur(6px);
-  width: 100%;
   border-top: solid 1px variables.$color-trypticon;
+  border-radius: functions.px2rem(10);
 }
 
 .slider-control {
